<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background_color"

    >


    <LinearLayout
        android:id="@+id/btns"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/rlContent"
        android:layout_marginLeft="@dimen/margin_top"
        android:layout_marginRight="@dimen/margin_top"
        android:layout_marginTop="15dp"
        android:orientation="horizontal"
        android:weightSum="2">


        <Button
            android:id="@+id/btnForgotPassword"

            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@drawable/btn_rounded_white"
            android:onClick="onClick"
            android:padding="7dp"
            android:singleLine="true"
            android:text="@string/forgot_password"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="10sp" />

        <Button
            android:id="@+id/btnRegister"

            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:background="@drawable/btn_rounded_white"
            android:onClick="onClick"
            android:padding="7dp"
            android:singleLine="true"
            android:text="Register"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="10sp" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btns"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="4dp">

        <TextView
            android:id="@+id/lblSkip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="4dp"
            android:drawablePadding="6dp"
            android:drawableRight="@mipmap/skip_arrow"
            android:onClick="onClick"
            android:singleLine="true"
            android:text="Skip"
            android:textColor="@android:color/white"
            android:textSize="12sp" />

        <View
            android:id="@+id/vSkip"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_alignLeft="@+id/lblSkip"
            android:layout_alignRight="@+id/lblSkip"
            android:layout_below="@+id/lblSkip"
            android:background="@color/divider_mini"></View>

        <TextView
            android:id="@+id/lbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/vSkip"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="10dp"
            android:singleLine="true"
            android:text="@string/login_with"
            android:textColor="@android:color/white"
            android:textSize="12sp" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lbl"
            android:layout_centerHorizontal="true"

            >

            <RelativeLayout
                android:id="@+id/imgBtnFrb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageButton
                    android:id="@+id/imgBtnFb"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_marginRight="2dp"
                    android:background="@color/white"
                    android:src="@mipmap/facebook" />

                <com.facebook.login.widget.LoginButton
                    android:id="@+id/loginfb_button"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_marginRight="2dp"
                    android:src="@mipmap/facebook"
                    android:visibility="gone" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/asd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/imgBtnFrb">

                <ImageButton
                    android:id="@+id/imgBtnGoogle"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_marginRight="2dp"
                    android:background="@color/white"
                    android:src="@mipmap/gmail" />

                <com.google.android.gms.common.SignInButton
                    android:id="@+id/GsignIn"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_marginRight="2dp"
                    android:visibility="gone" />

            </RelativeLayout>

            <ImageButton
                android:id="@+id/imgBtnInstagram"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_toRightOf="@+id/asd"
                android:background="@color/white"
                android:onClick="onClick"
                android:src="@mipmap/instagram" />

        </RelativeLayout>


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rlTop"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="33dp">

        <ImageView
            android:id="@+id/ivLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:src="@mipmap/logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ivLogo"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="10dp"
            android:text="@string/login"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rlContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_top"
        android:layout_marginRight="@dimen/margin_top"
        android:layout_centerVertical="true"
        android:layout_alignStart="@+id/btns">

        <EditText
            android:id="@+id/edUserName"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edittextheight"
            android:backgroundTint="@android:color/white"
            android:digits="0,1,2,3,4,5,6,7,8,9,qwertzuiopasdfghjklyxcvbnm,_,.,@,-,QWERTZUIOPASDFGHJKLYXCVBNM"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textColor="@color/white"
            android:textSize="@dimen/edit_textsize"
            android:gravity="left|center_vertical"
            android:textColorHint="@android:color/white" />

        <EditText
            android:id="@+id/edPassword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edittextheight"
            android:layout_below="@+id/edUserName"
            android:layout_marginTop="10dp"
            android:backgroundTint="@android:color/white"
            android:hint="@string/password"

            android:inputType="textPassword"
            android:maxLength="20"
            android:padding="10dp"
            android:textSize="@dimen/edit_textsize"
            android:gravity="left|center_vertical"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"

            />

        <Button
            android:id="@+id/btnSignIn"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@+id/edPassword"
            android:layout_marginTop="10dp"
            android:background="@drawable/btnwhite"
            android:hint="@string/password"
            android:onClick="onClick"
            android:text="@string/sign_in"
            android:textAllCaps="false"
            android:textSize="@dimen/edit_textsize"
            android:textColor="@color/app_text_color"
            android:textStyle="bold" />


    </RelativeLayout>


</RelativeLayout>